video/ome/api-exporter/allow-exporter.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-exporter
  namespace: ome
spec:
  podSelector:
    matchLabels:
      app: api-exporter
  ingress:
  - ports:
    - port: http
